Anonymous | Login | 2021-01-18 07:32 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031087 | Open CASCADE | [OCCT] OCCT:Configuration | public | 2019-10-20 13:38 | 2020-09-11 15:40 | ||||||||
Reporter | kgv | ||||||||||||
Assigned To | bugmaster | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031087: Configuration - make FreeType dependency optional | ||||||||||||
Description | Although FreeType is mandatory tool for normal work of OCCT 3D Viewer, it might be sacrificed in some cases, when minimal application size is more important than functionality. | ||||||||||||
Steps To Reproduce | N/A | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||||||||
|
![]() |
|
(0088361) git (administrator) 2019-10-20 13:39 |
Branch CR31087 has been created by kgv. SHA-1: 7e6c16a1754a5a94bcef9572ce99d3aa71e40ee3 Detailed log of new commits: Author: kgv Date: Sun Oct 20 13:38:24 2019 +0300 0031087: Configuration - make FreeType dependency optional |
(0090791) bugmaster (administrator) 2020-03-03 10:22 |
Is this fix actual now? |
![]() |
|||
Date Modified | Username | Field | Change |
2019-10-20 13:38 | kgv | New Issue | |
2019-10-20 13:38 | kgv | Assigned To | => bugmaster |
2019-10-20 13:38 | kgv | Relationship added | related to 0031070 |
2019-10-20 13:39 | git | Note Added: 0088361 | |
2019-10-20 13:46 | kgv | Relationship added | related to 0023049 |
2020-03-03 10:22 | bugmaster | Note Added: 0090791 | |
2020-03-03 10:22 | bugmaster | Status | new => assigned |
2020-03-04 10:28 | kgv | Relationship added | child of 0031401 |
2020-09-11 15:40 | utverdov | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |