0031087: Configuration - make FreeType dependency optional