src/Font/Font_FTFont.cxx
@@ -25,8 +25,10 @@
 
 #include <algorithm>
 
-#include <ft2build.h>
-#include FT_FREETYPE_H
+#ifdef HAVE_FREETYPE
+  #include <ft2build.h>
+  #include FT_FREETYPE_H
+#endif
 
 IMPLEMENT_STANDARD_RTTIEXT(Font_FTFont,Standard_Transient)
 
@@ -40,7 +42,11 @@ Font_FTFont::Font_FTFont (const Handle(Font_FTLibrary)& theFTLib)
   myActiveFTFace(NULL),
   myFontAspect  (Font_FontAspect_Regular),
   myWidthScaling(1.0),
+#ifdef HAVE_FREETYPE
   myLoadFlags   (FT_LOAD_NO_HINTING | FT_LOAD_TARGET_NORMAL),
+#else
+  myLoadFlags   (0),
+#endif
   myUChar       (0U),
   myToUseUnicodeSubsetFallback (Font_FontMgr::ToUseUnicodeSubsetFallback())
 {
@@ -70,7 +76,9 @@ void Font_FTFont::Release()
   myUChar = 0;
   if (myFTFace != NULL)
   {
+  #ifdef HAVE_FREETYPE
     FT_Done_Face (myFTFace);
+  #endif
     myFTFace = NULL;
   }
   myActiveFTFace = NULL;
@@ -96,6 +104,7 @@ bool Font_FTFont::Init (const Handle(NCollection_Buffer)& theData,
     return false;
   }
 
+#ifdef HAVE_FREETYPE
   if (!theData.IsNull())
   {
     if (FT_New_Memory_Face (myFTLib->Instance(), theData->Data(), (FT_Long )theData->Size(), 0, &myFTFace) != 0)
@@ -145,6 +154,9 @@ bool Font_FTFont::Init (const Handle(NCollection_Buffer)& theData,
   }
   myActiveFTFace = myFTFace;
   return true;
+#else
+  return false;
+#endif
 }
 
 // =======================================================================
@@ -174,6 +186,7 @@ Handle(Font_FTFont) Font_FTFont::FindAndCreate (const TCollection_AsciiString& t
       return aFont;
     }
   }
+#ifdef HAVE_FREETYPE
   else if (theStrictLevel == Font_StrictLevel_Any)
   {
     switch (theFontAspect)
@@ -199,6 +212,7 @@ Handle(Font_FTFont) Font_FTFont::FindAndCreate (const TCollection_AsciiString& t
       return aFont;
     }
   }
+#endif
   return Handle(Font_FTFont)();
 }
 
@@ -224,6 +238,7 @@ bool Font_FTFont::FindAndInit (const TCollection_AsciiString& theFontName,
     const TCollection_AsciiString& aPath = aRequestedFont->FontPathAny (myFontAspect, aParams.ToSynthesizeItalic);
     return Init (aPath, aParams);
   }
+#ifdef HAVE_FREETYPE
   else if (theStrictLevel == Font_StrictLevel_Any)
   {
     if (theFontAspect == Font_FontAspect_Italic
@@ -236,6 +251,7 @@ bool Font_FTFont::FindAndInit (const TCollection_AsciiString& theFontName,
                                                                  const_cast<Standard_Byte*>(Font_DejavuSans_Latin_woff));
     return Init (aBuffer, "Embed Fallback Font", aParams);
   }
+#endif
   Release();
   return false;
 }
@@ -251,6 +267,7 @@ bool Font_FTFont::findAndInitFallback (Font_UnicodeSubset theSubset)
     return myFallbackFaces[theSubset]->IsValid();
   }
 
+#ifdef HAVE_FREETYPE
   myFallbackFaces[theSubset] = new Font_FTFont (myFTLib);
   myFallbackFaces[theSubset]->myToUseUnicodeSubsetFallback = false; // no recursion
 
@@ -267,6 +284,7 @@ bool Font_FTFont::findAndInitFallback (Font_UnicodeSubset theSubset)
                                       + " for symbols unsupported by '" + myFTFace->family_name + "'", Message_Trace);
     }
   }
+#endif
   return myFallbackFaces[theSubset]->IsValid();
 }
 
@@ -276,7 +294,12 @@ bool Font_FTFont::findAndInitFallback (Font_UnicodeSubset theSubset)
 // =======================================================================
 bool Font_FTFont::HasSymbol (Standard_Utf32Char theUChar) const
 {
+#ifdef HAVE_FREETYPE
   return FT_Get_Char_Index (myFTFace, theUChar) != 0;
+#else
+  (void )theUChar;
+  return false;
+#endif
 }
 
 // =======================================================================
@@ -290,6 +313,7 @@ bool Font_FTFont::loadGlyph (const Standard_Utf32Char theUChar)
     return myUChar != 0;
   }
 
+#ifdef HAVE_FREETYPE
   myGlyphImg.Clear();
   myUChar = 0;
   myActiveFTFace = myFTFace;
@@ -318,6 +342,9 @@ bool Font_FTFont::loadGlyph (const Standard_Utf32Char theUChar)
 
   myUChar = theUChar;
   return true;
+#else
+  return false;
+#endif
 }
 
 // =======================================================================
@@ -330,6 +357,7 @@ bool Font_FTFont::RenderGlyph (const Standard_Utf32Char theUChar)
   myUChar = 0;
   myActiveFTFace = myFTFace;
 
+#ifdef HAVE_FREETYPE
   if (theUChar != 0
   &&  myToUseUnicodeSubsetFallback
   && !HasSymbol (theUChar))
@@ -391,6 +419,10 @@ bool Font_FTFont::RenderGlyph (const Standard_Utf32Char theUChar)
 
   myUChar = theUChar;
   return true;
+#else
+  (void )theUChar;
+  return false;
+#endif
 }
 
 // =======================================================================
@@ -399,6 +431,7 @@ bool Font_FTFont::RenderGlyph (const Standard_Utf32Char theUChar)
 // =======================================================================
 unsigned int Font_FTFont::GlyphMaxSizeX (bool theToIncludeFallback) const
 {
+#ifdef HAVE_FREETYPE
   if (!theToIncludeFallback)
   {
     float aWidth = (FT_IS_SCALABLE(myFTFace) != 0)
@@ -420,6 +453,10 @@ unsigned int Font_FTFont::GlyphMaxSizeX (bool theToIncludeFallback) const
     }
   }
   return aWidth;
+#else
+  (void )theToIncludeFallback;
+  return 0;
+#endif
 }
 
 // =======================================================================
@@ -428,6 +465,7 @@ unsigned int Font_FTFont::GlyphMaxSizeX (bool theToIncludeFallback) const
 // =======================================================================
 unsigned int Font_FTFont::GlyphMaxSizeY (bool theToIncludeFallback) const
 {
+#ifdef HAVE_FREETYPE
   if (!theToIncludeFallback)
   {
     float aHeight = (FT_IS_SCALABLE(myFTFace) != 0)
@@ -449,6 +487,10 @@ unsigned int Font_FTFont::GlyphMaxSizeY (bool theToIncludeFallback) const
     }
   }
   return aHeight;
+#else
+  (void )theToIncludeFallback;
+  return 0;
+#endif
 }
 
 // =======================================================================
@@ -457,7 +499,11 @@ unsigned int Font_FTFont::GlyphMaxSizeY (bool theToIncludeFallback) const
 // =======================================================================
 float Font_FTFont::Ascender() const
 {
+#ifdef HAVE_FREETYPE
   return float(myFTFace->ascender) * (float(myFTFace->size->metrics.y_ppem) / float(myFTFace->units_per_EM));
+#else
+  return 0.0f;
+#endif
 }
 
 // =======================================================================
@@ -466,7 +512,11 @@ float Font_FTFont::Ascender() const
 // =======================================================================
 float Font_FTFont::Descender() const
 {
+#ifdef HAVE_FREETYPE
   return float(myFTFace->descender) * (float(myFTFace->size->metrics.y_ppem) / float(myFTFace->units_per_EM));
+#else
+  return 0.0f;
+#endif
 }
 
 // =======================================================================
@@ -475,7 +525,11 @@ float Font_FTFont::Descender() const
 // =======================================================================
 float Font_FTFont::LineSpacing() const
 {
+#ifdef HAVE_FREETYPE
   return float(myFTFace->height) * (float(myFTFace->size->metrics.y_ppem) / float(myFTFace->units_per_EM));
+#else
+  return 0.0f;
+#endif
 }
 
 // =======================================================================
@@ -508,6 +562,7 @@ bool Font_FTFont::getKerning (FT_Vector& theKern,
                               Standard_Utf32Char theUCharCurr,
                               Standard_Utf32Char theUCharNext) const
 {
+#ifdef HAVE_FREETYPE
   theKern.x = 0;
   theKern.y = 0;
   if (theUCharNext != 0 && FT_HAS_KERNING(myActiveFTFace) != 0)
@@ -523,6 +578,11 @@ bool Font_FTFont::getKerning (FT_Vector& theKern,
     }
     return true;
   }
+#else
+  (void )theKern;
+  (void )theUCharCurr;
+  (void )theUCharNext;
+#endif
   return false;
 }
 
@@ -537,9 +597,14 @@ float Font_FTFont::AdvanceX (Standard_Utf32Char theUCharNext) const
     return 0.0f;
   }
 
+#ifdef HAVE_FREETYPE
   FT_Vector aKern;
   getKerning (aKern, myUChar, theUCharNext);
   return myWidthScaling * fromFTPoints<float> (myActiveFTFace->glyph->advance.x + aKern.x);
+#else
+  (void )theUCharNext;
+  return 0.0f;
+#endif
 }
 
 // =======================================================================
@@ -553,9 +618,14 @@ float Font_FTFont::AdvanceY (Standard_Utf32Char theUCharNext) const
     return 0.0f;
   }
 
+#ifdef HAVE_FREETYPE
   FT_Vector aKern;
   getKerning (aKern, myUChar, theUCharNext);
   return fromFTPoints<float> (myActiveFTFace->glyph->advance.y + aKern.y);
+#else
+  (void )theUCharNext;
+  return 0.0f;
+#endif
 }
 
 // =======================================================================
@@ -564,6 +634,7 @@ float Font_FTFont::AdvanceY (Standard_Utf32Char theUCharNext) const
 // =======================================================================
 Standard_Integer Font_FTFont::GlyphsNumber (bool theToIncludeFallback) const
 {
+#ifdef HAVE_FREETYPE
   Standard_Integer aNbGlyphs = myFTFace->num_glyphs;
   if (theToIncludeFallback)
   {
@@ -577,6 +648,10 @@ Standard_Integer Font_FTFont::GlyphsNumber (bool theToIncludeFallback) const
     }
   }
   return aNbGlyphs;
+#else
+  (void )theToIncludeFallback;
+  return 0;
+#endif
 }
 
 // =======================================================================
@@ -585,11 +660,15 @@ Standard_Integer Font_FTFont::GlyphsNumber (bool theToIncludeFallback) const
 // =======================================================================
 void Font_FTFont::GlyphRect (Font_Rect& theRect) const
 {
+#ifdef HAVE_FREETYPE
   const FT_Bitmap& aBitmap = myActiveFTFace->glyph->bitmap;
   theRect.Left   = float(myActiveFTFace->glyph->bitmap_left);
   theRect.Top    = float(myActiveFTFace->glyph->bitmap_top);
   theRect.Right  = float(myActiveFTFace->glyph->bitmap_left + (int )aBitmap.width);
   theRect.Bottom = float(myActiveFTFace->glyph->bitmap_top  - (int )aBitmap.rows);
+#else
+  (void )theRect;
+#endif
 }
 
 // =======================================================================
